--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -58,3 +58,7 @@ features:
     enable: false
   privacy_pack:
     enable: false
+appearance:
+  mode: system
+  color: emerald
+  custom_css: "css/custom.css"  # Link to your custom CSS file here
